--- a/03-pizza-menu/package.json
+++ b/03-pizza-menu/package.json
@@ -34,5 +34,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "prettier": "3.0.3"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
